# ymatch

./: .gitignore  .prettierignore  AGENTS.md  Caddyfile.oci  Caddyfile.oci.staging  Dockerfile.dev  LICENSE  README.md  Taskfile.yml  backend.Dockerfile.deps  backend.Dockerfile.e2e  backend.Dockerfile.prod  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.oci.yml  docker-compose.proto.yml  docker-compose.yml  entrypoint.sh  firebase.json  frontend.Dockerfile.prod  initial.md  storage.rules
backend/: .env  .env.example  .gitignore  Cargo.toml  build.rs
backend/migrations/: 20250101000000_initial_schema.sql  20250118000000_guest_auth.sql  20250118000001_inventory_quantity.sql  20250118000002_inventory_independence.sql  20250118000003_event_analytics_and_favorites.sql  20250118000004_merch_item_groups.sql  20250118000005_merch_sort_order.sql  20250118000006_event_unique_views.sql  20250118000007_inventory_trade_status.sql  20250118000008_message_location.sql  20250118000009_group_favorites.sql  20250322000000_roles_and_bans.sql  20250322000001_draft_and_soft_delete.sql  20250405000000_trade_lifecycle.sql  20250405000001_inventory_applied.sql  20250405000002_inventory_applied_per_user.sql  20250609000000_merchandise_groups.sql  20250615000000_drop_merch_sort_order.sql  20260622000000_trade_negotiation.sql  20260627000000_merch_unique_live_name.sql  20260629000000_match_group_scope.sql  20260704000000_match_unique_pair_group.sql  20260705000000_rbac.sql  20260708000000_merch_create_permission.sql  20260709000000_merch_edit_group_match_permissions.sql  20260710000000_drop_users_role.sql  20260712000000_group_delete_permission.sql  20260712120000_user_read_permission.sql  20260712140000_group_photo_url.sql  (+6 more)
(+317 files in other folders)
