[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
governor = "0.10"
prost = "0.12"
prost-types = "0.12"
pbjson = "0.6.0"
sysinfo = "0.38.3"
axum-extra = { version = "0.9", features = ["multipart"] }
base64 = "0.22"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1.0"
